--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,19 @@ importlib-metadata==4.12.0
 itsdangerous==2.0.1
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.3
+openpyxl==3.0.10
+pandas==1.4.4
 Pillow==9.2.0
 pycparser==2.21
+python-dateutil==2.8.2
+pytz==2022.2.1
+requests==2.28.1
+six==1.16.0
 SQLAlchemy==1.4.39
 svg.path==6.2
+urllib3==1.26.12
 Werkzeug==2.1.2
 WTForms==3.0.1
+yarg==0.1.9
 zipp==3.8.1
