--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,windows
 
+
+# Manual added
+putninalozi/site.db
+__pycache__/
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
