ver 0.315 local pdf files ignored

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ putninalozi/users/__pycache__/
 putninalozi/vehicles/__pycache__/
 __pycache__/
 venv/
+putninalozi/static/pdf_forms/*.*
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
